[tool.poetry]
name = "cx-prod"
version = "0.1.0"
description = ""
authors = ["diwaHa <diwahar008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.3.23"
langchain-openai = "0.3.12"
langchain-core = "0.3.51"
langchain-community = "0.3.21"
langchain-chroma = "0.2.2"
langgraph = "0.2.53"
openai = "^1.30.1"
docx2txt = "^0.9"
pypdf = "^5.4.0"
python-multipart = "^0.0.20"
streamlit = "^1.44.1"
fastapi = "^0.115.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
langchain-mongodb = "^0.6.2"
pymongo = "^4.13.0"
unstructured = "^0.17.2"
langsmith = "^0.3.40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
